infra/k8s/coupon-deply.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coupon-deply
spec:
  replicas: 1
  selector:
    matchLabels:
      app: coupon
  template:
    metadata:
      labels:
        app: coupon
    spec:
      containers:
        - name: coupon
          image: nerojz/food-coupon
---
apiVersion: v1
kind: Service
metadata:
  name: coupon-svc
spec:
  selector:
    app: coupon
  ports:
    - name: coupon-svc-port
      protocol: TCP
      port: 3000
      targetPort: 3000
