infra/k8s/keycloak-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-svc-bridge
spec:
  type: ExternalName
  externalName: keycloak.keycloak.svc.cluster.local
