infra/k8s/product-deply.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-deply
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product
  template:
    metadata:
      labels:
        app: product
    spec:
      containers:
        - name: product
          image: nerojz/food-product
---
apiVersion: v1
kind: Service
metadata:
  name: product-svc
spec:
  selector:
    app: product
  ports:
    - name: product-svc-port
      protocol: TCP
      port: 3000
      targetPort: 3000
