infra/k8s/product-mongo-deply.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-mongo-deply
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-mongo
  template:
    metadata:
      labels:
        app: product-mongo
    spec:
      containers:
        - name: product-mongo
          image: mongo
---
apiVersion: v1
kind: Service
metadata:
  name: product-mongo-svc
spec:
  selector:
    app: product-mongo
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
