infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /$1 # review afterward
    # kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/configuration-snippet: |-
      rewrite /keycloak/(.*) /$1 break;
spec:
  ingressClassName: nginx
  rules:
    - host: myprojects.dev
      http:
        paths:
          - path: /api/auth/?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-svc
                port:
                  number: 3000
          - path: /api/coupon/?(.*)
            pathType: Prefix
            backend:
              service:
                name: coupon-svc
                port:
                  number: 3000
          - path: /keycloak/(.*)
            pathType: Prefix
            backend:
              service:
                name: keycloak-svc-bridge
                port:
                  number: 53582
